--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-  "folder_mapping": {
+  "FOLDER_MAPPING": {
     "images": ["png", "jpeg", "jpg", "gif"],
     "videos": ["mp4", "mov", "avi"],
     "documents": ["pdf", "docx", "xlsx", "txt"],
+    "fonts": ["ttf", "otf", "woff", "woff2", "eot"],
     "other": []
   },
   "DOWNLOAD_DIR": "C:/Users/DeeSe/Downloads",
